<resources>
    <string name="app_name">StoryApp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="invalid_password">Password less than 6 characters</string>
    <string name="invalid_email">Incorrect email format</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="invalid_name">Name empty</string>
    <string name="image_desc">Photo</string>
    <string name="date">19/4/2021</string>
    <string name="logout">Logout</string>
    <string name="register_success">Registration Successful</string>
    <string name="already_exists">Account already exists</string>
    <string name="stories_page">Stories</string>
    <string name="data_failed">Data failed to load</string>
    <string name="detail_page">Detail</string>
    <string name="login_page">Login Page</string>
    <string name="login_success">Login success</string>
    <string name="login_fail">Login failed, check email/password</string>
    <string name="fab">fab</string>
    <string name="not_grant">permission not granted</string>
    <string name="must_be_filled">image and description are required</string>
    <string name="camera_x">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_failed">Upload failed</string>
    <string name="description">Enter a description..</string>
    <string name="title_description">What are you thinking about?</string>
    <string name="setting">Setting</string>
    <string name="retry">Retry</string>
    <string name="map">Map</string>
</resources>